@@ -1,3 +1,11 @@
+2018-08-10  Janus Weil  <janus@gcc.gnu.org>
+
+	PR fortran/57160
+	* gfortran.dg/actual_pointer_function_1.f90: Fix invalid test case.
+	* gfortran.dg/inline_matmul_23.f90: Add option "-ffrontend-optimize".
+	* gfortran.dg/short_circuiting_2.f90: New test case.
+	* gfortran.dg/short_circuiting_3.f90: New test case.
+
 2018-08-10  Alexander Monakov  <amonakov@ispras.ru>
 
 	PR target/82418
